--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/mayalust/lin-leetcode/issues"
   },
-  "homepage": "https://github.com/mayalust/lin-leetcode#readme"
+  "homepage": "https://github.com/mayalust/lin-leetcode#readme",
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^6.1.4"
+  }
 }
